feat: 修正無法啟動服務問題